# resolving

./: .gitignore  README.md  notes.org  pyproject.toml
data/: trace.txt  trace1.txt
doc/: hypercube.tex  metric_dimension.tex  notes.org  optimizations.org  references.bib
doc/TeX/: .gitignore  new_talk.tex  onthefly.tex  pingpong.tex  specifics.tex  symmetries.tex  symmetry.tex
doc/TeX/templates/: abbrev.tex  mystyle.tex
resolving/: __init__.py  bounds.py  check.py  conflictor.py  farkas.py  generate.py  gensymm.py  graphs.py  greedy.py  hypercube_qbf.py  hypergraph.py  lex.py  logic.py  maxent.py  maxtest.py  metric.py  partitions.py  pingpong.py  polyhedron.py  qbf.py  resolve.py  resolver.py  schreier_sims.py  smt.py  smt_solvers.py  snake.py  symmbreak.py  symmetry.py  util.py  z3_solve.py
resolving/certificates/: check_mip.py  cuts.py
src/resolving/: __init__.py  bdd.py  bounds.py  check.py  conflictor.py  gensymm.py  graphs.py  hypercube.py  hypercube_qbf.py  line_code.py  logic.py  lpcheck.py  maxtest.py  mpingpong.py  nputil.py  partitions.py  polyhedron.py  qbf.py  resolver.py  separate.py  timeit.py  util.py
src/resolving/certificates/: check_mip.py  farkas.py
src/resolving/claude/: cegar_scip.py  search.py  search3.py
src/resolving/polytope/: facets.py
src/resolving/qbf/: hypercube_qbf.py
src/resolving/smt/: line_code.py  z3_solve.py
tests/: test_graphs.py
