[project]
name = "resolving"
version = "0.1.0"
description = "Calculate the metric dimension of the hypercube"
authors = [{ name = "Victor S. Miller", email = "victorsmiller@gmail.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
    "numpy>=1.24.2",
    "networkx>=3.0",
    "python-sat>=0.1.8.dev2",
    "pypblib>=0.0.4",
    "more-itertools>=9.1.0",
    "PySMT>=0.9.5",
    "sympy>=1.11.1",
    "py-aiger>=6.2.1",
    "matplotlib>=3.7.1",
    "pydot>=1.4.2",
    "z3-solver>=4.12.2.0",
    "cvxpy>=1.3.2",
    "symmetry",
    "pycddlib>=3.0.2,<4",
]

[dependency-groups]
test = ["pytest>=7.4.0"]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
symmetry = { git = "https://github.com/algebravic/symmetry.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
